# promptPilot

./: .env.example  .gitignore  EXECUTION_LOG.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/api/: .env.example  README.md  main.py  pyproject.toml
apps/api/app/: config.py  db.py  main.py  models.py  schemas.py
apps/api/app/routers/: health.py  imports.py  intelligence.py  profile.py  prompts.py  sessions.py
apps/api/app/services/: classifier.py  coaching_habits.py  domain_capabilities.py  dspy_modules.py  guardrails.py  import_normalizer.py  import_service.py  knowledge_support.py  llm_client.py  profile_analyzer.py  profile_insights.py  prompt_engine.py  prompt_generator.py  prompt_intelligence.py  prompt_scorer.py  question_generator.py
apps/web/: README.md  package.json
docs/: architecture.md  product-spec.md  prompt-engine.md
evals/promptfoo/: phase14-live-evaluation.yaml  phase14_regression.py
execution-reports/: 00-environment-inventory.md  01-raw-materials.md  CHANGELOG.md  CURRENT_STATUS.md  README.md
execution-reports/phases/: phase-00-local-environment.md  phase-01-monorepo-boilerplate.md  phase-02-infrastructure.md  phase-03-backend-api-skeleton.md  phase-04-database-models.md  phase-05-prompt-engine-v1.md  phase-06-frontend-mvp.md  phase-07-prompt-knowledge-base.md  phase-07-prompting-profile-foundation.md  phase-08-prompting-trait-detection.md  phase-08-retrieval-augmented-generation.md  phase-09-chat-history-import-integration-foundation.md  phase-09-dspy-integration.md  (+13 more)
infra/: docker-compose.yml
(+14 files in other folders)
