[project]
name = "api"
version = "0.1.0"
description = "PromptPilot FastAPI service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dspy-ai>=3.2.1",
    "fastapi>=0.137.0",
    "litellm>=1.89.0",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.49.0",
]
